# ncsh-agent

./: .gitignore  CHANGELOG.md  DEPLOYMENT.md  Makefile  README.md  cli.py  e2e.py  git_changes.txt  main.py  pyproject.toml  requirements.in  setup.cfg  smoke_test.py
.cursorrules/: build.md  cursor-instructions.md  dependency-management.md  examples.py  guidelines.md
.github/workflows/: ci.yml  deploy.yml  docker-build.yml  ncsoccer-pipeline.yml
analysis/: __init__.py  agent.py  database.py  datasets.py  duckdb_analyzer.py  prompts.py
analysis/data/: data.parquet
analysis/tools/: __init__.py  claude_tools.py
examples/: 0_base.py  1_basic.py  2_future_dates.py  __init__.py  __main__.py  basic.py  future_dates.py
instructions/: 0_project_overview.md  1_code_style_and_organization.md  2_project_architecture.md  3_llm_and_tool_usage.md  4_development_workflow.md
scripts/: release.sh
terraform/: README.md  main.tf  variables.tf
terraform/bootstrap/: README.md  main.tf
terraform/ec2/: README.md  main.tf  outputs.tf  terraform.tfvars.example  variables.tf
terraform/modules/github-oidc/: main.tf
ui/: .env.example  AUTHENTICATION.md  Dockerfile  README.md  app.py  docker-compose.yml  start.sh  streamlit_agent.py
ui-analytics/: .gitignore  Dockerfile  README.md  app.py  db_utils.py  docker-compose.yml
ui-analytics/data/: team_groups.db
ui-analytics/src/: __init__.py  callback.py  db.py  layout.py  queries.py  style.py  util.py
ui-analytics/src/callbacks/: __init__.py  dashboard.py  filters.py
ui-analytics/src/components/: __init__.py  layout.py
ui-analytics/src/database/: __init__.py  connection.py
ui/nginx/: streamlit.conf
(+5 files in other folders)
